ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: "cd-api.jupiter.money"
      http:
        paths:
          - path: /
            backend:
              serviceName: spin-gate
              servicePort: 8084
  tls:
    - hosts:
        - "cd-api.jupiter.money"
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-deck
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: "cd.jupiter.money"
      http:
        paths:
          - path: /
            backend:
              serviceName: spin-deck
              servicePort: 9000
  tls:
    - hosts:
        - "cd.jupiter.money"
